--- a/package.json
+++ b/package.json
@@ -34,10 +34,7 @@
     "autod": "autod"
   },
   "files": [
-    "app.js",
-    "agent.js",
-    "config",
-    "app"
+    "config"
   ],
   "ci": {
     "version": "8, 10"
