--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   ],
   "dependencies": {
     "joi": "^17.5.0",
-    "joi-to-swagger": "^6.2.0"
+    "joi-to-swagger": "^6.2.0",
+    "koa2-ratelimit": "^1.1.3"
   },
   "devDependencies": {
     "autod": "^3.0.1",
